2009-05-19  Nate Chapin  <japhet@google.com>

        Reviewed by Darin Fisher.

        Upstream V8 bindings for CanvasRenderingContext2D.
        https://bugs.webkit.org/show_bug.cgi?id=25858

        * bindings/v8/custom/V8CanvasRenderingContext2DCustom.cpp: Moved bindings from v8_custom.cpp.

2009-05-19  Jessie Berlin  <jberlin@apple.com>

        Reviewed by Mark Rowe.

        Windows Build Fix.

        * WebCore.vcproj/WebCore.vcproj: Copy accessibility headers from WebCore.

2009-05-19  Timothy Hatcher  <timothy@apple.com>

        <rdar://problem/6889218> REGRESSION: Some iChat transcript resources are not
        loaded because willSendRequest doesn't happen immediately

        Reviewed by Antti Koivisto.

        * WebCore.base.exp: Export Loader::servePendingRequests().

2009-05-19  David Levin  <levin@chromium.org>

        Reviewed by Dimitri Glazkov.

        Bug 25859: Need to upstream ScriptController.* for v8.
        https://bugs.webkit.org/show_bug.cgi?id=25859

        Fixing the header file (which I accidentally made identical to the cpp file).

        * bindings/v8/ScriptController.h:

2009-05-19  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler and Brady Eidson.

        <rdar://problem/6900582> REGRESSION (r42446?): UA Profiler in http://stevesouders.com/ua/ stalls

        The problem was that Document::removeAllEventListeners() was called for a wrong document
        when a CachedFrame was destroyed.

        Cannot be tested automatically, because DRT doesn't have a b/f cache.

        * dom/Document.cpp: (WebCore::Document::domWindow): Make sure that this doesn't return an
        unrelated window even if document's m_frame pointer is stale.

        * history/CachedFrame.cpp: (WebCore::CachedFrame::clear): Added a FIXME about strange behavior.

2009-05-19  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.
